--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2613,7 +2613,6 @@ input, select, textarea {
 					left: 0;
 					width: 100%;
 					height: 100%;
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
@@ -2815,6 +2814,7 @@ input, select, textarea {
 			display: block;
 			border-bottom: 0;
 			color: inherit;
+			font-family: "Allura";
 			font-weight: 900;
 			letter-spacing: 0.35em;
 			margin: 0 0 3em 0;
