--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		background: #e9b8a840;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2870,7 +2870,7 @@ input, select, textarea {
 						height: 3em;
 						line-height: 3em;
 						padding: 0 1.5em;
-						background-color: rgba(255, 255, 255, 0.5);
+						background-color: rgba(255, 255, 255, 0.13);
 						border-radius: 4px;
 						border: 0;
 						font-size: 0.8em;
@@ -3145,7 +3145,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 1.5em 0 0.2em 0 ;
-		background-color: #f6f6f6;
+		background-color: #f0d0c187;
 	}
 
 		#footer > .inner {
