--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,7 +150,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #f2849e !important;
+			color: #d7897e !important;
 		}
 
 	strong, b {
@@ -2435,7 +2435,7 @@ input, select, textarea {
 		border-radius: 4px;
 		border: 0;
 		box-shadow: inset 0 0 0 2px #585858;
-		color: #585858 !important;
+		color: #613b2e !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2473,8 +2473,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #c17267 !important;
+			box-shadow: inset 0 0 0 2px #c17267;
 		}
 
 		input[type="submit"]:active,
@@ -2516,7 +2516,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #f2849e;
+				background-color: #c17267;
 			}
 
 			input[type="submit"].primary:active,
@@ -2967,7 +2967,7 @@ input, select, textarea {
 		max-width: 80%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		background: #ca8462;
+		background: #8d5644;
 		color: #ffffff;
 		cursor: default;
 		visibility: hidden;
