--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2692,7 +2692,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #F0D0C1;
+				background-color: #e9b8a8;
 			}
 
 			.tiles article.style4 > .image:before {
